2003-06-24  Alan Modra  <amodra@bigpond.net.au>

	* elf32-i386.c: Convert to C90 function definitions, remove unnecessary
	prototypes and casts.  Replace PTR with void *.  Formatting.
	* elf32-ppc.c: Likewise.  Break long strings too.
	(ppc_elf_relax_section): Use enum elf_ppc_reloc_type for r_type.
	(ppc_elf_unhandled_reloc): Internationalize error message.
	* elf32-ppc.h: Remove PARAMS.

2003-06-23  Mark Mitchell  <mark@codesourcery.com>

	* elf32-ppc.c (ppc_elf_begin_write_processing): Use bytes to count
	APUinfo slots.
	(ppc_elf_final_write_processing): Likewise.

2003-06-23  H.J. Lu <hongjiu.lu@intel.com>

	* elflink.h (elf_link_input_bfd): Check raw size when using
	kept_section to preserve debug information discarded by
	linkonce.

2003-06-20  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (struct ppc_link_hash_table): Add top_id.
	(ppc64_elf_setup_section_lists): Set it.
	(ppc64_elf_relocate_section): Check sym section id against top_id.
	(ppc_build_one_stub): Comment on top_id.

2003-06-20  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* config.bfd: Add tic4x-*-rtems*.

2003-06-20  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c: Convert to C90 function definitions, remove unnecessary
	prototypes and casts.  Replace PTR with void *.  Format copyright.
	Mention ABI links.
	(struct ppc_link_hash_table): Rename sgot, srelgot, splt, srelplt,
	sdynbss, srelbss, sglink, sbrlt and srelbrlt to got, relgot .. relbrlt.
	(ppc_type_of_stub): Make r_type an enum.
	(ppc64_elf_size_stubs): Likewise.
	* elf64-ppc.h: Remove PARAMS macro.

2003-06-19  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_link_hash_table_create): Reinstate init of
	elf hash tab fields.

	* elf64-ppc.c (ppc64_elf_reloc_type_lookup): Tidy prototype.
	(ppc64_elf_info_to_howto): Likewise.
	(ppc64_elf_build_stubs): Add "stats" param, and print statistics.
	* elf64-ppc.h (ppc64_elf_build_stubs): Adjust prototype.

2003-06-19  Alan Modra  <amodra@bigpond.net.au>
